[package]
name = "thumbor-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65" #错误处理
axum = "0.5.16" # web服务器
base64 = "0.13.0" # base64编码/解码
bytes = "1.2.1"
image = "0.24.4"
lazy_static = "1.4.0"
lru = "0.8.1"
percent-encoding = "2.2.0"
photon-rs = "0.3.1"
prost = "0.11.0"
protoc = "2.28.0"
reqwest = "0.11.12"
serde = {version ="1.0.145",features = ["derive"]}
tokio = {version ="1.21.2",features = ["full"]} #异步处理
tower = {version = "0.4.13", features = ["util","timeout","load-shed","limit"]}
tower-http = "0.3.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.1" #编译protobuf
